Fixes to text overflow for long titles

--- a/components/mini/MiniView.module.css
+++ b/components/mini/MiniView.module.css
@@ -27,9 +27,7 @@
   font-size: 10px;
   color: white;
   padding-top: 2px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  white-space: normal;
 }
 
 .artist {
@@ -101,9 +99,7 @@
   font-size: 13px;
   color: white;
   padding-top: 14px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  white-space: normal;
 }
 
 .desktopArtist {
